--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 html, body {
   height: 100%;
-  background: url("../images/bg1.jpg") no-repeat center center fixed;
+  background: url("../images/Concert-1630.jpg") no-repeat center center fixed;
   background-size: cover;
 
 }
